# textparser

./: .gitignore  .readthedocs.yml  pyproject.toml  setup.py  textparser.py
.github/workflows/: pythonpackage.yml
docs/: conf.py  index.rst  requirements.txt
tests/: test_textparser.py
textparser/: __init__.py
